--- a/styles.css
+++ b/styles.css
@@ -17,4 +17,23 @@
 
 .btn {
   margin-left: 20px;
+
 }
+
+.header-title {
+  margin-top: 0px;
+margin-bottom: 0px;
+color: #fff;
+font-size: 55px;
+line-height: 1.3;
+text-align: center;
+letter-spacing: -0.7px;
+}
+
+.header-subtitle {
+  font-family: Pulpdisplay, sans-serif;
+  color: #d6dbf0;
+  font-size: 20px;
+  line-height: 1.3;
+  font-weight: 500;
+  text-align: center;}
